2006-04-20  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/Makefile.am,
        gtksourceview/gtksourcelanguage-parser-1.c,
        gtksourceview/gtksourcelanguage-parser-2.c,
        gtksourceview/gtksourcelanguage-private.h,
        gtksourceview/gtksourcelanguage.c,
        tests/test-widget.c:
        * gtksourcelanguagesmanager.[ch]: removed.
        * gtksourcelanguagemanager.[ch]: new files.
        Renamed GtkSourceLanguagesManager to GtkSourceLanguageManager.

2006-04-17  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/latex.lang: was broken, fixed.

2007-04-17  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/verilog.lang: port to new format.

2007-04-17  Carlos Garnacho  <carlos@imendio.com>

	* gtksourceview/gtksourceview.c (gtk_source_view_undo)
	(gtk_source_view_redo) (gtk_source_view_populate_popup): Do not allow
	undo/redo if the GtkSourceView is not editable. Fixes #418521.

2007-04-16  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcebuffer.c (get_bracket_match_tag),
        (gtk_source_buffer_move_cursor), (update_bracket_match_style),
        gtksourceview/gtksourcebuffer.h: removed gtk_source_buffer_set_bracket_match_style;
        fixed bracket match tag styling, so it's safe to call
        gtk_source_buffer_style_scheme() from buffer_init.

2007-04-16  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourcelanguagesmanager.c:
	* gtksourceview/gtksourcestylemanager.c:
	use g_get_user_data_dir, not g_get_user_config_dir.

2007-04-15  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourceview.c (gtk_source_view_expose): fixed drawing current
        line so no garbage is left on screen when scrolling horizontally.

2007-04-15  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcebuffer.[ch],
        gtksourceview/gtksourceview.[ch]: made "style-scheme" a property
        of GtkSourceBuffer, not of GtkSourceView. Removed gtk_source_view_set_style_scheme,