@@ -64,8 +64,9 @@ const GSList		 *gtk_source_language_manager_get_available_languages	(GtkSourceLa
 GtkSourceLanguage	 *gtk_source_language_manager_get_language_by_id	(GtkSourceLanguageManager *lm,
 										 const gchar              *id);
 
-/* Property */
-const GSList		 *gtk_source_language_manager_get_lang_files_dirs	(GtkSourceLanguageManager *lm);
+gchar			**gtk_source_language_manager_get_lang_files_dirs	(GtkSourceLanguageManager *lm);
+void			  gtk_source_language_manager_set_lang_files_dirs	(GtkSourceLanguageManager *lm,
+										 gchar                   **dirs);
 
 G_END_DECLS
 
